--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,12 +1,12 @@
 // Color Variables
-$primary-color: #0AA8A7;
+$primary-color: #bf0d3e;
 $text-color: #777;
-$text-color-dark: #222;
+$text-color-dark: #546373;
 $body-color: #fff;
 $border-color: #ECECEC;
 $black: #000;
 $white: #fff;
-$light: #EDF6F5;
+$light: #ECECEC;
 
 // Font Variables
 $primary-font: 'Lato', sans-serif;
